--- a/index.html
+++ b/index.html
@@ -3,11 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="keywords" content="gabriel alvarez, gabriel,alvarez,fernando gabriel, gabriel portafolio, portafolio gabriel alvarez, portafolio fernando gabriel alvarez moyano" >
+    <meta name="author" content="Gabriel Alvarez" >
+    <meta name="robots" content="index" >
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet"  href="index.css" >
     <title>Portafolio</title>
 </head>
 <body>
+    <header>
+        <nav class="menu-lateral">
+            <div class="btn-expandir">
+                <i class="bi bi-list" id="btn-exp"></i>
+            </div>
+            <div class="title--portafolio">
+                <h1>Portafolio</h1>
+            </div>
+            <ul>
+                <li class="item-menu">
+                    <a href="#body-container">
+                        <span class="icon"><i class="bi bi-house-door"></i></i></span>
+                        <span class="txt-link">Inicio</span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="#sobreMi">
+                        <span class="icon"><i class="bi bi-book"></i></i></span>
+                        <span class="txt-link">Sobre Mi</span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="#skills">
+                        <span class="icon"><i class="bi bi-code"></i></i></span>
+                        <span class="txt-link">Skills</span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="#curriculum">
+                        <span class="icon"><i class="bi bi-journal-text"></i></i></i></span>
+                        <span class="txt-link">Curriculum</span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="#portafolio">
+                        <span class="icon"><i class="bi bi-bag"></i></i></span>
+                        <span class="txt-link">Portafolio</span>
+                    </a>
+                </li>
+                <li class="item-menu">
+                    <a href="#contacto">
+                        <span class="icon"><i class="bi bi-envelope-at"></i></i></span>
+                        <span class="txt-link">Contacto</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <header>
         <nav class="nav-container">
             <div class="logo">
@@ -64,9 +115,9 @@
                     <h2>Datos Personales</h2>
                 </div>
                 <div class="datos">
-                    <p><b>Cumpleaños:</b>  26 - 06 - 2003</p>
-                    <p><b>Email:</b>       Gabiista8gmail.com</p>
-                    <p><b>Dirección:</b>   Buenos Aires, Argentina</p>
+                    <p><b>Cumpleaños:</b>26 - 06 - 2003</p>
+                    <p><b>Email:</b>Gabiista8gmail.com</p>
+                    <p><b>Dirección:</b>Buenos Aires, Argentina</p>
                 </div>
             </div>
             <div class="intereses-container">
@@ -81,8 +132,8 @@
                     </div>
                     <div class="juegos">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="icon-interes" viewBox="0 0 16 16">
-                            <path d="M10 2a2 2 0 0 1-1.5 1.937v5.087c.863.083 1.5.377 1.5.726 0 .414-.895.75-2 .75s-2-.336-2-.75c0-.35.637-.643 1.5-.726V3.937A2 2 0 1 1 10 2z"/>
-                            <path d="M0 9.665v1.717a1 1 0 0 0 .553.894l6.553 3.277a2 2 0 0 0 1.788 0l6.553-3.277a1 1 0 0 0 .553-.894V9.665c0-.1-.06-.19-.152-.23L9.5 6.715v.993l5.227 2.178a.125.125 0 0 1 .001.23l-5.94 2.546a2 2 0 0 1-1.576 0l-5.94-2.546a.125.125 0 0 1 .001-.23L6.5 7.708l-.013-.988L.152 9.435a.25.25 0 0 0-.152.23z"/>
+                            <path d="M11.5 6.027a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm-1.5 1.5a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1zm2.5-.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm-1.5 1.5a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1zm-6.5-3h1v1h1v1h-1v1h-1v-1h-1v-1h1v-1z"/>
+                            <path d="M3.051 3.26a.5.5 0 0 1 .354-.613l1.932-.518a.5.5 0 0 1 .62.39c.655-.079 1.35-.117 2.043-.117.72 0 1.443.041 2.12.126a.5.5 0 0 1 .622-.399l1.932.518a.5.5 0 0 1 .306.729c.14.09.266.19.373.297.408.408.78 1.05 1.095 1.772.32.733.599 1.591.805 2.466.206.875.34 1.78.364 2.606.024.816-.059 1.602-.328 2.21a1.42 1.42 0 0 1-1.445.83c-.636-.067-1.115-.394-1.513-.773-.245-.232-.496-.526-.739-.808-.126-.148-.25-.292-.368-.423-.728-.804-1.597-1.527-3.224-1.527-1.627 0-2.496.723-3.224 1.527-.119.131-.242.275-.368.423-.243.282-.494.575-.739.808-.398.38-.877.706-1.513.773a1.42 1.42 0 0 1-1.445-.83c-.27-.608-.352-1.395-.329-2.21.024-.826.16-1.73.365-2.606.206-.875.486-1.733.805-2.466.315-.722.687-1.364 1.094-1.772a2.34 2.34 0 0 1 .433-.335.504.504 0 0 1-.028-.079zm2.036.412c-.877.185-1.469.443-1.733.708-.276.276-.587.783-.885 1.465a13.748 13.748 0 0 0-.748 2.295 12.351 12.351 0 0 0-.339 2.406c-.022.755.062 1.368.243 1.776a.42.42 0 0 0 .426.24c.327-.034.61-.199.929-.502.212-.202.4-.423.615-.674.133-.156.276-.323.44-.504C4.861 9.969 5.978 9.027 8 9.027s3.139.942 3.965 1.855c.164.181.307.348.44.504.214.251.403.472.615.674.318.303.601.468.929.503a.42.42 0 0 0 .426-.241c.18-.408.265-1.02.243-1.776a12.354 12.354 0 0 0-.339-2.406 13.753 13.753 0 0 0-.748-2.295c-.298-.682-.61-1.19-.885-1.465-.264-.265-.856-.523-1.733-.708-.85-.179-1.877-.27-2.913-.27-1.036 0-2.063.091-2.913.27z"/>
                         </svg>
                     </div>
                     <div class="musica">
@@ -382,12 +433,12 @@
             </div>
             <div class="portafolios-items">
                 <figure>
-                    <img src="galeria/proyecto1.png" class="img">
+                    <h2 class="a">En Proceso...</h2>
                 </figure>
             </div>
             <div class="portafolios-items">
                 <figure>
-                    <img src="galeria/proyecto1.png" class="img">
+                    <h2 class="a">En Proceso...</h2>
                 </figure>
             </div>
         </div>
@@ -397,21 +448,21 @@
             <h2>Contacto</h2>
         </div>
         <div class="form-container">
-            <form class="form-items">
+            <form class="form-items" action="https://formsubmit.co/gabiista8@gmail.com" method="POST">
                 <div class="name">
-                    <input type="text" placeholder="Nombre"  required="" >
+                    <input type="text" name="name" placeholder="Nombre"  required="" >
                 </div>
                 <div class="lastName">
-                    <input type="text" placeholder="Apellido" required=""> 
+                    <input type="text" name="lastName" placeholder="Apellido" required=""> 
                 </div>
                 <div class="mail">
-                    <input type="email" placeholder="Correo Electrónico" required=""> 
+                    <input type="email" name="email" placeholder="Correo Electrónico" required=""> 
                 </div>
                 <div class="theme">
-                    <input type="text" placeholder="Tema" required=""> 
+                    <input type="text" name="theme" placeholder="Tema" required=""> 
                 </div>
                 <div class="message" >
-                    <textarea placeholder="Mensaje" required="" ></textarea>
+                    <textarea name="message" placeholder="Mensaje" required="" ></textarea>
                 </div>
                 <div class="send">
                     <input type="submit">
@@ -419,5 +470,6 @@
             </form>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
