--- a/index.html
+++ b/index.html
@@ -454,9 +454,15 @@
                 </div>
             </div>
             <div class="portafolios-items">
-                <figure>
-                    <h2 class="a">En Proceso...</h2>
-                </figure>
+                <a href="http://www.estudiobonfili.com.ar/" > 
+                    <figure>
+                        <img src="galeria/proyecto3.png" class="img" >
+                    </figure>                   
+                </a>
+                <div class="portafolios-description">
+                    <h2><b>Estudio Bonfili</b></h2>
+                    <p>Página creada para un estudio de abogado especialistas en accidentes de transitos</p>
+                </div>
             </div>
         </div>
     </div>
