--- a/index2.html
+++ b/index2.html
@@ -455,9 +455,15 @@
                 </div>
             </div>
             <div class="portafolios-items">
-                <figure>
-                    <h2 class="a">In Process...</h2>
-                </figure>
+                <a href="http://www.estudiobonfili.com.ar/" > 
+                    <figure>
+                        <img src="galeria/proyecto3.png" class="img" >
+                    </figure>                   
+                </a>
+                <div class="portafolios-description">
+                    <h2><b>Estudio Bonfili</b></h2>
+                    <p>Page created for a law firm specializing in traffic accidents.</p>
+                </div>
             </div>
         </div>
     </div>
